--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -11,3 +11,10 @@ Style/StringLiteralsInInterpolation:
 
 Layout/LineLength:
   Max: 120
+  Severity: info
+
+Style/Documentation:
+  Severity: info
+
+Metrics/BlockLength:
+  Severity: info
