--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -8,3 +8,7 @@ Style/StringLiterals:
 Style/StringLiteralsInInterpolation:
   Enabled: true
   EnforcedStyle: double_quotes
+
+Metrics/BlockLength:
+  Exclude:
+    - 'spec/**/*_spec.rb'
