--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -9,12 +9,6 @@ Style/StringLiteralsInInterpolation:
   Enabled: true
   EnforcedStyle: double_quotes
 
-Layout/LineLength:
-  Max: 120
-  Severity: info
-
-Style/Documentation:
-  Severity: info
-
 Metrics/BlockLength:
-  Severity: info
+  Exclude:
+    - 'spec/**/*_spec.rb'
