Project opensource config (#13)
* Add coveralls gem and respective configuration

* Add required additional files

* Add coveralls to CI

* Add basic improvements to the readme file

* Fix CI with coveralls and include badge on readme

* Add logic for OpenSSF scorecard badge

* Remove unrequired job regarding coveralls

* Update CI and include CD for releases

* Apply updates to the README file

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: Ruby
 on:
   push:
     branches:
-      - master
+      - main
 
   pull_request:
 
@@ -25,3 +25,7 @@ jobs:
         bundler-cache: true
     - name: Run the default task
       run: chmod +x bin/console && bundle exec rake
+    - name: Coveralls GitHub Action
+      uses: coverallsapp/github-action@v2.2.3
+  
+    
